--- a/resources/rails/deb.yml
+++ b/resources/rails/deb.yml
@@ -1,11 +1,25 @@
+# The name MUST follow the conventions of Debian package naming,
+# since we use the name to make a Debian package...
+# Basically, lowercase letters, numbers and hyphend are fine
+# everything else is verboten. 
 name: "rails-app"
+# Version is used for creating the package too. Version strings 
+# of the format X.Y.Z are used: 1.0, 1.0.1, etc. FYI, 1.1.5 is a 
+# LOWER version number than 1.10 - 1.10 is equivalent to 1.10.0
 version: "1.0"
 license: "(c) Matt Patterson, 2007"
+summary: "App description (mandatory)"
 server_name: "reprocessed.org"
 server_aliases: 
   - "www.reprocessed.org"
-init_name: "reprocessed"
-summary: "App description (mandatory)"
+# The values in mongrel_cluster are used to create a mongrel_cluster.yml file
+# with values for log_file, cwd, and pid_file created for you
+# You should edit values here and avoid editing mongrel_cluster.yml
+mongrel_cluster:
+  port: "8000"
+  environment: production
+  address: 127.0.0.1
+  servers: 3
 # To add dependencies, follow this pattern:
 # By default, most of the things you'll need are added for you
 # without you having to add them here:
