--- a/resources/rails/mongrel_cluster.yml
+++ b/resources/rails/mongrel_cluster.yml
@@ -3,5 +3,5 @@ log_file: log/mongrel.log
 port: "8000"
 environment: production
 address: 127.0.0.1
-pid_file: tmp/pids/mongrel.pid
+pid_file: /var/run/app-name
 servers: 3
